# ai-tierforge

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: 1st-test-pass-synthetic-data.md  PRD.md  SPEC.md  WBS.md  field-test-plan.md  pass2-synthetic-data.md  pass3-real-data.md
src/ai_tierforge/: __init__.py  budget.py  cli.py  config.py  cost.py  exceptions.py  omlx.py  router.py  slo.py  types.py
src/ai_tierforge/adapters/: __init__.py  base.py  openai_compat.py
tests/: __init__.py  conftest.py  test_budget.py  test_cli.py  test_config.py  test_cost.py  test_exceptions.py  test_omlx.py  test_router.py  test_slo.py  test_types.py
tests/field/: fetch_real_data.py  run_field_test.py
tests/field/realdata/: code_snippets.json  index.json  issues.json  prs.json
tests/fixtures/: __init__.py  mock_responses.py  tiers-custom-tiers.yaml  tiers-invalid.yaml  tiers.yaml
